--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -1,99 +1,148 @@
 profilepti:
   - title: 1. Casanova
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
     title: 2. A. Santos
   - featuredImage: /images/uploads/taranto.png
+    flag: /images/uploads/FlagPortugal.jpg
     title: 3. Taranto
   - title: 4. SlashJr™
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 5. AlcobiaV
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 6. RS|M4ster
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 7. Mykarr2
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 8. BMW
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 9. Malico
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 10. ZaMaNoO
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 11. Dvalin
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 12. Joselito
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 13. Bruno
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 14. Rafa­­™$
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 15. Hugo
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 16. PR LelouchYT
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 17. Jorge
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 18. Shisui
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 19. Freddy
-    featuredImage: /images/uploads/01.png
+    featuredImage: /images/uploads/freddy.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 20. Canada
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 21. nugget
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 22. TZ
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 23. SRT
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 24. ric123
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 25. Sargento HS
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 26. Majo
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 27. FrankW
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 28. Farinhol
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 29. Srbebado
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 30. Raio®
     featuredImage: /images/uploads/liderequipa.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 31. Ricardo
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 32. pmGoPro
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 33. Kharthoum
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 34. DaniDias
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 35. 420
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 36. JoniOne
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 37. Saraivix
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 38. JDias
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 39. Edgar
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 40. RDU
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 41. Peter Pan
     featuredImage: /images/uploads/liderequipa.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 42. Lourinhã
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 43. Bob (W33D)
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 44. Daniel
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 45. Pull
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 46. Marcio_AZR
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 47. Viet24 (André)
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 48. SB|Top(4)
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 49. !GnI$
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
