--- a/_data/ptii.yaml
+++ b/_data/ptii.yaml
@@ -1,99 +1,148 @@
 profileptii:
   - title: 1. SlashPT
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - featuredImage: /images/uploads/liderequipa.png
+    flag: /images/uploads/FlagPortugal.jpg
     title: 2. 2 Raios
   - title: 3. Funder (Tiago)
     featuredImage: /images/uploads/liderequipa.png
+    flag: /images/uploads/FlagPortugal.jpg
   - featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
     title: 4. Peras
   - title: 5. XF17SUPER
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 6. Eddy
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 7. MartyMcFly
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 8. PowerLord
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 9. LokyPedro
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 10. M@nc@
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 11. VW
     featuredImage: /images/uploads/liderequipa.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 12. Harry Potter
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 13. GAB
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 14. Nuno
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 15. Nivaldo
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 16. Hvelll
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 17. Fenix
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 18. Geno
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 19. cacamaca
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 20. Totti
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 21. Bruno
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: "22. SilvaR "
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 23. figas
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 24. Golden
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 25. seven7
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 26. GoPull
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 27. Jiandie
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 28. PandaGirl
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 29. GOC
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 30. ValterSr
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 31. F1-TRL
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 32. Sousa
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 33. Roger
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 34. Ru13en
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 35. Concept
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 36. Barrote
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 37. Oliveira
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 38. Jaiminho
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 39. Freixo
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 40. Fustiga
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 41. ACapela
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 42. t.duarte
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 43. Benfica 1904
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 44. Motorato546
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 45. Rufus
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 46. Amaral
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 47. RicSDias
     featuredImage: /images/uploads/01.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 48. purevil75
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
   - title: 49. Quirgius
     featuredImage: /images/uploads/02.png
+    flag: /images/uploads/FlagPortugal.jpg
