--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -45,7 +45,7 @@ profilepti:
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
   - title: 16. PR LelouchYT
-    featuredImage: /images/uploads/01.png
+    featuredImage: /images/uploads/lelouch.png
     flag: /images/uploads/FlagPortugal.jpg
   - title: 17. Jorge
     featuredImage: /images/uploads/01.png
