--- a/_data/youtube.yaml
+++ b/_data/youtube.yaml
@@ -3,19 +3,7 @@ youtubers:
     YouTubeUsername: UCivk-ma9dv0VbhrBIHok2PQ
     link: https://www.youtube.com/channel/UCivk-ma9dv0VbhrBIHok2PQ
     ariaLabel: Biclas Gaming
-  - youtubeImage: /images/uploads/BiclasGamingPoster.jpg
-    YouTubeUsername: UCivk-ma9dv0VbhrBIHok2PQ
-    link: https://www.youtube.com/channel/UCivk-ma9dv0VbhrBIHok2PQ
-    ariaLabel: Biclas Gaming
-  - youtubeImage: /images/uploads/BiclasGamingPoster.jpg
-    YouTubeUsername: UCivk-ma9dv0VbhrBIHok2PQ
-    link: https://www.youtube.com/channel/UCivk-ma9dv0VbhrBIHok2PQ
-    ariaLabel: Biclas Gaming
-  - youtubeImage: /images/uploads/BiclasGamingPoster.jpg
-    YouTubeUsername: UCivk-ma9dv0VbhrBIHok2PQ
-    link: https://www.youtube.com/channel/UCivk-ma9dv0VbhrBIHok2PQ
-    ariaLabel: Biclas Gaming
-  - youtubeImage: /images/uploads/BiclasGamingPoster.jpg
-    YouTubeUsername: UCivk-ma9dv0VbhrBIHok2PQ
-    link: https://www.youtube.com/channel/UCivk-ma9dv0VbhrBIHok2PQ
-    ariaLabel: Biclas Gaming
+  - youtubeImage: /images/uploads/lelouchYoutube.jpg
+    YouTubeUsername: UCMjJ_KJDDemWq8kg6D6uR3Q
+    link: https://www.youtube.com/c/LelouchYT
+    ariaLabel: Lelouch YT
