--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -87,7 +87,7 @@ profilepti:
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
   - title: 30. Raio®
-    featuredImage: /images/uploads/liderequipa.png
+    featuredImage: /images/uploads/raio.png
     flag: /images/uploads/FlagPortugal.jpg
   - title: 31. Ricardo
     featuredImage: /images/uploads/01.png
