--- a/_data/youtube.yaml
+++ b/_data/youtube.yaml
@@ -23,3 +23,7 @@ youtubers:
     YouTubeUsername: UCpHyfvgXfBgrS3OiHtjRBMA
     link: https://www.youtube.com/channel/UCpHyfvgXfBgrS3OiHtjRBMA
     ariaLabel: RR
+  - youtubeImage: /images/uploads/YoutubersPosterFreddy.jpg
+    YouTubeUsername: UC_dURfZJtmleJdCxUhDsA6Q
+    link: https://www.youtube.com/channel/UC_dURfZJtmleJdCxUhDsA6Q
+    ariaLabel: Freddy
