--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -12,7 +12,7 @@ profile:
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
   - title: 5. Sn Murdock
-    featuredImage: /images/uploads/01.png
+    featuredImage: /images/uploads/snMurdock.png
     flag: /images/uploads/flagbrazil.jpg
   - title: 6. PT Mike
     featuredImage: /images/uploads/Myke.png
@@ -27,7 +27,7 @@ profile:
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
   - title: 10. SN MLOPES
-    featuredImage: /images/uploads/01.png
+    featuredImage: /images/uploads/snlopes.png
     flag: /images/uploads/flagbrazil.jpg
   - title: 11. PT Maximus®
     featuredImage: /images/uploads/01.png
