--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -66,7 +66,7 @@ profile:
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
   - title: 23. SN Ander
-    featuredImage: /images/uploads/01.png
+    featuredImage: /images/uploads/snAnder.png
     flag: /images/uploads/flagbrazil.jpg
   - title: 24. SN Betinho
     featuredImage: /images/uploads/01.png
