--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -36,7 +36,7 @@ profile:
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/flagbrazil.jpg
   - title: 13. SN TELL
-    featuredImage: /images/uploads/01.png
+    featuredImage: /images/uploads/snTell.png
     flag: /images/uploads/flagbrazil.jpg
   - title: 14. PT Mykarr
     featuredImage: /images/uploads/01.png
@@ -51,7 +51,7 @@ profile:
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
   - title: 18. SN Klauck
-    featuredImage: /images/uploads/01.png
+    featuredImage: /images/uploads/snKlauckNew.png
     flag: /images/uploads/flagbrazil.jpg
   - title: 19. SN Irenno
     featuredImage: /images/uploads/01.png
