--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -54,7 +54,7 @@ profilepti:
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
   - title: 19. Freddy
-    featuredImage: /images/uploads/freddy.png
+    featuredImage: /images/uploads/profileFreddy.png
     flag: /images/uploads/FlagPortugal.jpg
   - title: 20. Canada
     featuredImage: /images/uploads/01.png
