--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -2,147 +2,245 @@ profilepti:
   - title: 1. Casanova
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
     title: 2. A. Santos
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - featuredImage: /images/uploads/taranto.png
     flag: /images/uploads/FlagPortugal.jpg
     title: 3. Taranto
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 4. SlashJr™
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 5. AlcobiaV
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 6. RS|M4ster
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 7. Mykarr2
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 8. BMW
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 9. Malico
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 10. ZaMaNoO
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 11. Dvalin
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 12. Joselito
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 13. Bruno
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 14. Rafa­­™$
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 15. Hugo
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 16. PR LelouchYT
     featuredImage: /images/uploads/lelouch.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: https://www.youtube.com/c/LelouchYT
+    youtubelogo: /images/uploads/youtubeLogoSVG.svg
   - title: 17. Jorge
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 18. Shisui
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 19. Freddy
     featuredImage: /images/uploads/profileFreddy.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 20. Canada
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 21. nugget
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 22. TZ
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 23. SRT
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 24. ric123
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 25. Sargento HS
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 26. Majo
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 27. FrankW
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 28. Farinhol
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 29. Srbebado
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 30. Raio®
     featuredImage: /images/uploads/raio.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: https://www.youtube.com/channel/UCF4lFnLFczJmJc01ZFFJy-w
+    youtubelogo: /images/uploads/youtubeLogoSVG.svg
   - title: 31. Ricardo
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 32. pmGoPro
     featuredImage: /images/uploads/02.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 33. Kharthoum
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 34. DaniDias
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 35. 420
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 36. JoniOne
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 37. Saraivix
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 38. JDias
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 39. Edgar
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 40. RDU
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 41. Peter Pan
     featuredImage: /images/uploads/liderequipa.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 42. Lourinhã
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 43. Bob (W33D)
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 44. Daniel
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 45. Pull
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 46. Marcio_AZR
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 47. Viet24 (André)
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 48. SB|Top(4)
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 49. !GnI$
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
+    linkyoutube: #
+    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
