--- a/_data/pti.yaml
+++ b/_data/pti.yaml
@@ -92,8 +92,8 @@ profilepti:
   - title: 19. Freddy
     featuredImage: /images/uploads/profileFreddy.png
     flag: /images/uploads/FlagPortugal.jpg
-    linkyoutube: #
-    youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
+    linkyoutube: https://www.youtube.com/channel/UC_dURfZJtmleJdCxUhDsA6Q
+    youtubelogo: /images/uploads/youtubeLogoSVG.svg
   - title: 20. Canada
     featuredImage: /images/uploads/01.png
     flag: /images/uploads/FlagPortugal.jpg
