--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -1,6 +1,6 @@
 profile:
   - title: 1. SN Carlos
-    featuredImage: /images/uploads/01.png
+    featuredImage: /images/uploads/profileSnCarlos.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: https://www.youtube.com/channel/UCxZyi1KvyJbe2NypEgcjc_Q
     youtubelogo: /images/uploads/youtubeLogoSVG.svg
