--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -170,7 +170,7 @@ profile:
     linkyoutube: #
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
   - title: 35. SN Júlio
-    featuredImage: /images/uploads/01.png
+    featuredImage: /images/uploads/profileSnJulio.png
     flag: /images/uploads/flagbrazil.jpg
     linkyoutube: #
     youtubelogo: data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==
